[package]
name = "jif_to_jpg"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jif_to_jpg"
path = "src/bin/jif_to_jpg.rs"

[[bin]]
name = "jif_to_png"
path = "src/bin/jif_to_png.rs"

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

[profile.release]
opt-level = "z"       # optimise pour la taille
lto = true            # link-time optimization
codegen-units = 1     # meilleure optimisation
panic = "abort"       # pas de code d'unwinding
strip = true          # supprime les symboles de debug
