[package]
name = "quick_img_convert"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "quick_img_convert"
path = "src/bin/quick_img_convert.rs"

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "avif"] }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }

[profile.release]
opt-level = "z"       # optimise pour la taille
lto = true            # link-time optimization
codegen-units = 1     # meilleure optimisation
panic = "abort"       # pas de code d'unwinding
strip = true          # supprime les symboles de debug
